server/static/css/style.css
/* Allgemeines */

@font-face {
    font-family: OttoSans;
    font-style: normal;
    font-weight: 400;
    src: url(https://static.otto.de/assets-static/components/assets/otto-sans.CtUYNJ_f.woff2) format("woff2"),url(https://static.otto.de/assets-static/components/assets/otto-sans.DT9YO2fU.woff) format("woff")
}

@font-face {
    font-family: OttoSans;
    font-style: normal;
    font-weight: 700;
    src: url(https://static.otto.de/assets-static/components/assets/otto-sans-bold.7ffBVm3L.woff2) format("woff2"),url(https://static.otto.de/assets-static/components/assets/otto-sans-bold.BeUYGSjW.woff) format("woff")
}

@font-face {
    font-family: OttoPlay;
    font-style: normal;
    font-weight: 400;
    src: url(https://static.otto.de/assets-static/components/assets/otto-play.C9CZ0YGN.woff2) format("woff2")
}

@media (min-width: 48rem) {
    @font-face {
        font-family:OttoSansThin;
        font-style: normal;
        font-weight: 400;
        src: url(https://static.otto.de/assets-static/components/assets/otto-sans-thin.DVT-9QSF.woff2) format("woff2"),url(https://static.otto.de/assets-static/components/assets/otto-sans-thin.UQZ1fxrC.woff) format("woff")
    }
}

[data-theme="light"]{
    --otto-red: #eb001f;
    --center-container: #ffffff;
    --text: #000000;
    --table-element: #eaeaea;
    --background: #e6e6e6;

    --button: #eb001f;
    --button-hover: #dc001d;

    --username: #eaeaea;
    --username-hover: #fff;

    --inversion: invert(.1)

}

[data-theme="dark"] {
    --otto-red: #eb001f;
    --center-container: rgb(38, 39, 43);
    --text: #ddd9d9;
    --table-element: #363636;
    --background: #1d1d23;

    --button: #c4152c;
    --button-hover: #d52f45;

    --username: #464646;
    --username-text: #a4a4a4;
    --username-hover: #a4a4a4;
    --username-hover-text: #464646;
    
    --inversion: invert(.9)
}

body {
    font-family: 'OttoSans', sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--background);
    color: var(--text);
    overflow: hidden;
    transition: 300ms ease-in-out;
}

header {
    background-color: var(--center-container);
    padding: 20px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    margin-bottom: 20px;
    height: 40px;
    padding-right: 120px;
    display: flex;
    align-items: center;
    transition: 300ms ease-in-out;
}

.header-content {
    display: flex;
    align-items: center;
    width: 100%;
}

.logo {
    margin: 20px;
    width: 100px;
    height: 40px;
    height: auto;
    margin: 0;
}

.logo-button {
    margin:0;
    background: none;
    border: none;
    padding: 0;
    cursor: pointer;
}

.logo-big {
    width: auto;
    height: 70px;
    cursor: pointer;
    transition: transform 0.5s ease; /* Soft Übergang */
    user-select: none;
    display: none;
}


h1 {
    font-family: 'OttoPlay', sans-serif;
    color: var(--otto-red);
    margin: 0;
    font-size: 2.5em;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    cursor: pointer;
}

h2 {
    font-family: 'OttoSans', sans-serif;
    color: var(--text);
    margin: 3px;
    margin-top: 8px;
    font-size: 1em;
    align-self: left;
    margin-left: auto;
    margin-right: auto;
}

a {
    font-family: 'OttoSans', sans-serif;
    margin: 10px;
    font-size: 1em;
    line-height: 1.2em;
    align-self: left;
    margin-left: auto;
    margin-right: auto;
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    pointer-events: none;
    color: var(--text);
}

a[href] {
    pointer-events: auto;
}

p {
    font-family: 'OttoSans', sans-serif;
    margin: 3px;
    font-size: 1em;
    align-self: left;
    margin-left: auto;
    margin-right: auto;
    color: var(--text);
}

/* Produkt Container */
.product-container {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    padding: 20px;
    gap: 20px;
}

.noBorder {
    border: none;
    outline: none;
    background-color: #e6e6e6
}

.product-box {
    width: 300px;
    height: 370px;
    padding: 40px;
    background-color: var(--center-container);
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    text-align: center;
    cursor: pointer;
    display: grid;
    grid-template-rows: 1fr 1fr;
    transition: 500ms ease;
}
.moved{
    transform: translateX(-730px);
}

.removed{
    transform: translateX(-50vw);
}

.product-image {
    max-height: 200px;
    max-width: 250px;
    height: auto;
    align-self: center;
    justify-self: center;
    grid-row: 1;
    border-radius: 5px;
    box-shadow: 0 0 5px 1px rgba(255, 255, 255, 0.438);
}


.product1 {
    position: relative;
    left: -50px;
}

.product2 {
    position: relative;
    left: 50px;
}

.text-box {
    width: 100%;
    align-self: left;
    justify-self: top;
    grid-row: 2;
    margin-top: 40px;
    display: grid;
    color: var(--text);

}


.UpLogo {
    width: 50px;
    max-height: 200px;
    max-width: 250px;
    height: auto;
    align-self: center;
    justify-self: center;
    grid-row: 1;
    height: auto;
    box-shadow: none;
}

.arrow-container {
    display: grid;
    grid-template-rows: 1fr auto;
    justify-items: center;
    align-items: center;
    margin: 0 0px; /* Abstand */
    position: relative;
    height: 200px /* Für absolute Positionierung des Pfeils */
}


.arrow_red {
    width: 120px;
    height: auto;
    transition: transform 0.5s ease; /* Soft Übergang */
    position: absolute;
}

.check {
    width: 120px;
    height: auto;
    transition: 2s ease;
    position: absolute;
}

.index-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.price{
    font-weight: 700;
}

.center-container{
    width: 180px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.score-container{
    margin: 10px;
    margin-top: 50px;
    align-items: center;
    justify-content: center;
    scale: 1.1
}

.score-display{
    font-size: 1.2em;
    text-align: center;
    align-items: center;
    justify-content: center;
    transition-duration: 2s;
}
.score{
    font-size: 1.2em;
    font-weight: 700;
    color: #f00020;
}

.return-button {
    padding:0.8rem 3rem;
    margin:15px;
    font-size: 1.2em;
    font-weight: 700;
    background-color: #eb001f;
    color: white;
    border: none;
    border-radius: 0.5rem;
    cursor: pointer;
    transition-duration: 100ms;
    min-width: 150px;
    max-width: 500px;
    display: none;
}

.return-button:hover {
    background-color: #b80018;
}

.game-over{
    font-size: 1.5em;
    font-weight: 700;
    display: none;
}



/* Media Queries (for phone screens)*/

@media (max-width: 600px) {
    header {
        margin: 0;
        padding-right: 20px;
        z-index: 2;
    }

    .product-container {
        flex-direction: column;
        gap: 50px;
    }

    .center-container{
        height: 0px;
        display:flex;
        flex-direction: row;
        justify-content: center;

    }
    .arrow_red{
        visibility: hidden;
    }
    .logo-big{
        visibility: hidden;
    }
    .game-over{
        visibility: hidden;
    }
    .check{
        width: 60px;
        height: auto;
        z-index: 1;
    }
    .return-button {
        padding:0.8rem 1rem;
        margin-right: 0;
    }

    .score-container {
        display: flex;
        align-items: center;
        margin-top: 0px;
        margin-left: 0px;
        width: 10rem;
    }


    .product-box {
        display: flex;
        flex-direction: row;
        overflow: hidden;
        width: 90%;
        height: 250px;
        padding: 20px
    }

    .product-box img{
        max-width:100px
    }

    .meta {
        padding: 6px;
        z-index: 1;
    }

    .img-wrap {
        flex: 1 1 auto;
        min-height: 0;
    }

    .img-wrap img {
        width: 100%;
        height: 100%;
        object-fit: contain;
        display: block;
    }

    h1 {
        font-size: 30px;
    }

    a {
        display: -webkit-box;
        -webkit-line-clamp: 1;
        -webkit-box-orient: horizontal;
    }
}

@media (max-height: 800px) and (max-width: 600px) {
    .product-container {
        gap: 30px;
    }

    .product-box {
        height: 30vh
    }

    .question-mark, .arrow {
        font-size: 4em;
    }
}


footer {
    transition: 200ms;
    background-color: var(--background);
}

.footer-button {
    position: fixed;
    background-color: var(--center-container);
    border: none;
    bottom: 3vh;
    right: 3vh;
   width: 50px;
    height: 50px;
    border-radius: 10px;
    display: block;
    z-index: 99999;
    transition: 200ms ease-in-out;
    align-items: center;
    justify-content: center;
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.046)
}

.footer-button:hover{
    scale: 1.05;
}
.footer-button:active{
    scale: 1;
}

.footer-button:active .mode-img{
    scale: .5;
    rotate: 60deg;
}

.mode-img {
    align-items: center;
    justify-content: center;
    margin-top: 3px;
    margin-left: 2px;
    width: 25px;
    height:25px;
    transition: 500ms;
    filter: var(--inversion)
}

